Bug #10499 MyISAM: Function creation fails which returns GEOMETRY datatype.
Submitted: 10 May 2005 10:03 Modified: 31 Aug 2005 20:03
Reporter: Disha Email Updates:
Status: Closed
Category:Server Severity:S2 (Serious)
Version:5.0.5-beta pre-release OS:Any (Any)
Assigned to: Alexey Botchkov Target Version:

[10 May 2005 10:03] Disha
Description:
Create a function which returns the GEOMETRY dayatype for MyISAM storage engine. The
function creation fails with an error message.
 

How to repeat:
1. delimiter //
2. create database test//
3. use test
4. create function fn1 (f1 point) returns point//
5. Function creation of step (4) fails with an error message as,
ERROR 1178 (42000): The storage engine for the table doesn't support GEOMETRY

Expected Result: Function creation should succeed.

Actual Result  : The function creation fails with an error message as,
ERROR 1178 (42000): The storage engine for the table doesn't support GEOMETRY
[10 May 2005 17:45] Miguel Solorzano
miguel@hegel:~/dbs/5.0$ bin/mysql -uroot test
Welcome to the MySQL monitor.  Commands end with ; or \g.
Your MySQL connection id is 9 to server version: 5.0.6-beta-debug

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

mysql> delimiter //
mysql> create function fn1 (f1 point) returns point//
ERROR 1178 (42000): The storage engine for the table doesn't support GEOMETRY
[10 Aug 2005 8:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28102
[27 Aug 2005 15:26] Alexey Botchkov
pushed into 5.0.12
[31 Aug 2005 20:03] Paul DuBois
Noted in 5.0.12 changelog.