Fix for bug #10499 (Function creation with GEOMETRY return)